--- a/pizza.html
+++ b/pizza.html
@@ -1,5 +1,48 @@
 <html>
  <h1> <i> Welcome to DownTown Cafe</i> </h1> 
  <h2> <b> Proudly serving since 1958 </b> </h2>
+ <p> There's nothing cookie-cutter about Downtown Cafe.Not our pizzas.Not our people.And
+ definately not the way we live life.Around here,we don't settle for anything less than food
+ we're proud to serve.And we don't just clock in.Not when we can also become our best,make
+ friends,and have fun while we're at it.
+ </p>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  </html>
 
