--- a/pizza.html
+++ b/pizza.html
@@ -6,7 +6,11 @@
  we're proud to serve.And we don't just clock in.Not when we can also become our best,make
  friends,and have fun while we're at it.
  </p>
- 
+ <hr>
+ <p>
+ We're the pizza company that lives life unboxed.
+ </p>
+
  
  
  
