--- a/pizza.html
+++ b/pizza.html
@@ -10,6 +10,14 @@
  <p>
  We're the pizza company that lives life unboxed.
  </p>
+<p><b> We serve </b></p>
+ <ul>
+ <li> <i>pizza </i></li>
+ <li><i>coffee</i></li>
+ <li><i>sides</i></li>
+ <li><i>wings</i></li>
+ <li><i>more</i></li>
+ </ul>
 
  
  
