--- a/pizza.html
+++ b/pizza.html
@@ -18,43 +18,8 @@
  <li><i>wings</i></li>
  <li><i>more</i></li>
  </ul>
+ <blockquote> ALL YOU NEED IS LOVE AND <b>PIZZZZAAAAAAAAAAAAAAAAAAAA.....!!!!!</b>
+ </blockquote<>
 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- </html>
+</html>
 
