--- a/pizza.html
+++ b/pizza.html
@@ -20,6 +20,6 @@
  </ul>
  <blockquote> ALL YOU NEED IS LOVE AND <b>PIZZZZAAAAAAAAAAAAAAAAAAAA.....!!!!!</b>
  </blockquote<>
-
+ <img img src="pizza.jpg" />
 </html>
 
