--- a/myfile.html
+++ b/myfile.html
@@ -4,7 +4,12 @@
 <p>There's nothing cookie-cutter about Downtown Cafe.Not our pizzas.Not our people.And definately not the way we live life.Around here,we don't settle for anything less than food  we're proud to serve.And we don't just clock in.Not whe we can also become our best,make friends,and have fun while we're at it</p>
 <hr>
 <p> We're the pizza company that lives life unboxed.</p>
+<p><b> We serve </b></p>
+<ul>
+<li><i>Pizza</i>/</li>
+</ul>
 </hr>
+
 
 
 
