--- a/myfile.html
+++ b/myfile.html
@@ -7,6 +7,11 @@
 <p><b> We serve </b></p>
 <ul>
 <li><i>Pizza</i>/</li>
+<li><i>Coffee</i></li>
+<li><i>Sides</i></li>
+<li><i>Wings</i></li>
+<li><i>More</i></li>
+
 </ul>
 </hr>
 
