--- a/myfile.html
+++ b/myfile.html
@@ -14,6 +14,8 @@
 </ul>
 <blockquote> ALL YOU NEED IS LOVE AND <b>PIZZZAAAAAAAAAAAAAAAA....!!!!</b>
 </blockquote>
+<img img src="pizza.jpg" />
+
 
 </hr>
 
