--- a/myfile.html
+++ b/myfile.html
@@ -15,34 +15,13 @@
 <blockquote> ALL YOU NEED IS LOVE AND <b>PIZZZAAAAAAAAAAAAAAAA....!!!!</b>
 </blockquote>
 <img img src="pizza.jpg" />
-
-
 </hr>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
-
-
+<html>
+<div>
+<h2><b>CONTACT US</b></h2>
+<p><i>Address:</i>4 School st, Glen clov, NY 11542 </p>
+<p><i>To see map location</i></p>
+</div>
+</html>
 
