--- a/myfile.html
+++ b/myfile.html
@@ -22,6 +22,9 @@
 <h2><b>CONTACT US</b></h2>
 <p><i>Address:</i>4 School st, Glen clov, NY 11542 </p>
 <p><i>To see map location</i></p>
+<a href="https://www.google.com/search?tbm=lcl&q=downtown+cafe+glen+cove%2C+ny&oq=downtown+cafe+glen+cove&gs_l=psy-ab.3.0.35i39k1j0j0i20k1j0i22i30k1.9853.16821.0.17805.9.9.0.0.0.0.206.1084.0j7j1.8.0....0...1.1.64.psy-ab..2.7.970...46j0i67k1j0i46k1.0.P7a67eKp3kc#rlfi=hd:;si:10345625129021033291;mv:!1m3!1d230.32763998371075!2d-73.631512!3d40.864383999999994!2m3!1f0!2f0!3f0!3m2!1i946!2i469!4f13.1">Click
+here</a>
 </div>
+
 </html>
 
